fix: webview layout and interaction improvements
- Fix search bar double safe-area padding in webview (use direct child selector)
- Fix vertical project overview hidden behind webview topbar
- Fix theme picker not opening in webview (static Swal import)
- Allow logout button in webview
- Add force_webview feature flag for testing

--- a/assets/Project/ProjectPage.scss
+++ b/assets/Project/ProjectPage.scss
@@ -325,7 +325,7 @@
       height: $like-detail-triangle-height;
       content: '';
       // stylelint-disable-next-line scss/operator-no-unspaced
-      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 33.17 23.98"><defs><style>.a{fill:white}.b{fill:none;stroke:rgb(178,178,178);stroke-linecap:square;stroke-linejoin:round;stroke-width:2px;}</style></defs><polygon class="a" points="10.19 0 1 22.98 33.17 0 10.19 0"/><polyline class="b" points="9.28 2.27 1 22.98 30 2.27"/></svg>');
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 33.17 23.98"><defs>\3c style>.a{fill:white}.b{fill:none;stroke:rgb(178,178,178);stroke-linecap:square;stroke-linejoin:round;stroke-width:2px;}\3c /style></defs><polygon class="a" points="10.19 0 1 22.98 33.17 0 10.19 0"/><polyline class="b" points="9.28 2.27 1 22.98 30 2.27"/></svg>');
       background-repeat: no-repeat;
     }
   }
